--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'DM Sans', sans-serif;
+    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Nanum Gothic', sans-serif;
 }
 
 #container{
@@ -27,7 +30,7 @@
 
 .item-details{
     position:absolute;
-    top: 540px;
+    top: 530px;
 }
 
 /* Utilities */
